# mcp-for-metabase

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.codex/skills/connect-metabase-agents/: SKILL.md
.codex/skills/dashboard-authoring/: SKILL.md
.codex/skills/metabase-mcp/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: api_coverage.md  bug_report.md  feature_request.md
.github/rulesets/: default-branch.json
.github/workflows/: ci.yml  release.yml
docs/: AGENT_DEVELOPMENT_GUIDE.md  API_COVERAGE.md  ARCHITECTURE.md  CAPABILITIES.md  COMPATIBILITY.md  CONNECTING_AGENTS.md  DEFINITION_OF_DONE.md  DEPENDENCY_LICENSES.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TESTING.md  RELEASE_CHECKLIST.md  REQUIREMENTS.md  SECURITY.md  TOOL_CATALOG.md
examples/: build_dashboard_prompt.md
scripts/: bootstrap_metabase_test_instance.py  build_api_registry.py  check_release_version.py  diff_api_registry.py  fetch_openapi.py
src/mcp_for_metabase/: __init__.py  __main__.py  api_registry.json  audit.py  cli.py  client.py  config.py  errors.py  healthcheck.py  openapi.json  redaction.py  registry.py  runtime_logging.py  safety.py  safety_rules.py  server.py  snapshots.py  sql_guard.py  tools.py
src/mcp_for_metabase/api/: discovery.py  executor.py  validation.py
src/mcp_for_metabase/application/: admin.py  common.py  content.py  query.py  secondary.py  snapshot_workflows.py  snippets.py
src/mcp_for_metabase/mcp_app/: context.py  curated.py  factory.py  generic.py  prompts.py  resources.py
tests/: test_check_release_version.py  test_client.py  test_config.py  test_diff_api_registry.py  test_mcp_protocol.py  test_redaction.py  test_registry.py  test_safety.py  test_server_cli.py  test_server_tool_calls.py  test_snapshot_workflows.py  test_snapshots.py  test_sql_guard.py  test_tools.py
tests/integration/: test_live_dashboard_lifecycle.py
