[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mcp-for-metabase"
version = "0.1.0"
description = "Safety-gated MCP server for Metabase API access and dashboard authoring"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "mcp-for-metabase contributors" }]
maintainers = [{ name = "mcp-for-metabase maintainers" }]
keywords = [
  "analytics",
  "business-intelligence",
  "dashboards",
  "mcp",
  "metabase",
  "model-context-protocol",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
  "jsonschema>=4.20",
  "mcp[cli]>=1.13",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "structlog>=24.4",
  "tenacity>=8.5",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
  "build>=1.2",
  "twine>=5.1",
  "pip-licenses>=5.0",
  "types-requests>=2.32",
  "types-jsonschema>=4.24",
]

[project.urls]
Homepage = "https://github.com/DominikPollok/mcp-for-metabase"
Repository = "https://github.com/DominikPollok/mcp-for-metabase"
Issues = "https://github.com/DominikPollok/mcp-for-metabase/issues"
Changelog = "https://github.com/DominikPollok/mcp-for-metabase/blob/main/CHANGELOG.md"
Documentation = "https://github.com/DominikPollok/mcp-for-metabase#readme"

[project.scripts]
mcp-for-metabase = "mcp_for_metabase.cli:app"
metabase-mcp = "mcp_for_metabase.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_for_metabase"]

[tool.pytest.ini_options]
addopts = "--cov=mcp_for_metabase --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that require a live Metabase instance",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mcp_for_metabase"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
